# finance

./: .gitignore  AI_SUMMARY_README.md  BSE_COLLECTOR_README.md  HTML_AI_SUMMARY.md  HTML_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QWEN_API_MIGRATION.md  README.md  USAGE_GUIDE.md  pyproject.toml  stock_news_collector.py
src/: __init__.py  ai_summarizer.py  timeline.py
src/collectors/: __init__.py  base_collector.py  bse_collector.py  csrc_collector.py  eastmoney_api_collector.py  eastmoney_collector.py  exchange_collector.py  playwright_exchange_collector.py  sse_api_collector.py  szse_api_collector.py  tonghuashun_collector.py  xueqiu_collector.py
