[project]
name = "finance"
version = "0.1.0"
description = "股票公开消息收集和时间线生成工具"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openbb>=4.1.3",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "playwright>=1.56.0",
]
